--- a/app/app.global.css
+++ b/app/app.global.css
@@ -6,7 +6,7 @@ body {
   background-image: linear-gradient(45deg, rgba(0, 216, 255, .5) 10%, rgba(0, 1, 127, .7));
   */
   font-family: Roboto, Helvetica Neue, Arial, Helvetica;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 h2 {
