Make Login centered

--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -1,8 +1,9 @@
 .container {
-  position: absolute;
-  top: 30%;
-  left: 10px;
-  text-align: center;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .container h2 {
