--- a/app/app.global.css
+++ b/app/app.global.css
@@ -6,7 +6,8 @@ body {
   background-image: linear-gradient(45deg, rgba(0, 216, 255, .5) 10%, rgba(0, 1, 127, .7));
   */
   font-family: Roboto, Helvetica Neue, Arial, Helvetica;
-  overflow-y: auto;
+  overflow: hidden;
+  margin: 0;
 }
 
 #root, #app {
